--- a/src/home.html
+++ b/src/home.html
@@ -231,57 +231,59 @@
 								</ul>
 							</div>
 						</nav>
-						<div class="page__news-aside news-aside">
-							<a href="#" class="news-aside__title aside-title">Новости</a>
-							<div class="news-aside__items">
-								<div class="news-aside__item item-news-aside">
-									<a href="#" class="item-news-aside__title">Снижение цен на игровые площадки Jungle Gym</a>
-									<div class="item-news-aside__body">
-										<div class="item-news-aside__time"><span>19</span>авг</div>
-										<div class="item-news-aside__text">
-											Уважаемые покупатели!
-											Мы рады сообщить вам о снижении 
-											цены с 27 июля на детский игровой 
-											комплекс
+						<div class="page__content-aside" data-da=".page__content,991.98,last">
+							<div class="page__news-aside news-aside">
+								<a href="#" class="news-aside__title aside-title">Новости</a>
+								<div class="news-aside__items">
+									<div class="news-aside__item item-news-aside">
+										<a href="#" class="item-news-aside__title">Снижение цен на игровые площадки Jungle Gym</a>
+										<div class="item-news-aside__body">
+											<div class="item-news-aside__time"><span>19</span>авг</div>
+											<div class="item-news-aside__text">
+												Уважаемые покупатели!
+												Мы рады сообщить вам о снижении 
+												цены с 27 июля на детский игровой 
+												комплекс
+											</div>
 										</div>
 									</div>
-								</div>
-								<div class="news-aside__item item-news-aside">
-									<a href="#" class="item-news-aside__title">Поступление батутов Eclipse!</a>
-									<div class="item-news-aside__body">
-										<div class="item-news-aside__time"><span>12</span>авг</div>
-										<div class="item-news-aside__text">
-											Уважаемые покупатели!
-											Мы рады сообщить вам о снижении 
-											цены с 27 июля на детский игровой 
-											комплекс
+									<div class="news-aside__item item-news-aside">
+										<a href="#" class="item-news-aside__title">Поступление батутов Eclipse!</a>
+										<div class="item-news-aside__body">
+											<div class="item-news-aside__time"><span>12</span>авг</div>
+											<div class="item-news-aside__text">
+												Уважаемые покупатели!
+												Мы рады сообщить вам о снижении 
+												цены с 27 июля на детский игровой 
+												комплекс
+											</div>
 										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="page__reviews-aside reviews-aside">
-							<a href="#" class="reviews-aside__title aside-title">Отзывы</a>
-							<div class="reviews-aside__items">
-								<a href="#" class="reviews-aside__item item-reviews-aside">
-									<div class="item-reviews-aside__header">
-										<div class="item-reviews-aside__name">Павел Никифоров</div>
-										<div class="item-reviews-aside__date">12.09.2021</div>
-									</div>
-									<div class="item-reviews-aside__content _icon-quote">
-										<p>Ради экономии места в тренажерном зале приобрел многофункциональный силовой тренажер Life Gear. За такую небольшую стоимость и с такими 
-										возможностями, он просто не заменим.</p>
-									</div>
-								</a>
-								<a href="#" class="reviews-aside__item item-reviews-aside">
-									<div class="item-reviews-aside__header">
-										<div class="item-reviews-aside__name">Степан Николаевич</div>
-										<div class="item-reviews-aside__date">12.09.2021</div>
-									</div>
-									<div class="item-reviews-aside__content _icon-quote">
-										<p>Спасибо за прекрасный совет, велосипед всей семье понравился и цену за него достойную запросили.</p>
-									</div>
-								</a>
+							<div class="page__reviews-aside reviews-aside">
+								<a href="#" class="reviews-aside__title aside-title">Отзывы</a>
+								<div class="reviews-aside__items">
+									<a href="#" class="reviews-aside__item item-reviews-aside">
+										<div class="item-reviews-aside__header">
+											<div class="item-reviews-aside__name">Павел Никифоров</div>
+											<div class="item-reviews-aside__date">12.09.2021</div>
+										</div>
+										<div class="item-reviews-aside__content _icon-quote">
+											<p>Ради экономии места в тренажерном зале приобрел многофункциональный силовой тренажер Life Gear. За такую небольшую стоимость и с такими 
+											возможностями, он просто не заменим.</p>
+										</div>
+									</a>
+									<a href="#" class="reviews-aside__item item-reviews-aside">
+										<div class="item-reviews-aside__header">
+											<div class="item-reviews-aside__name">Степан Николаевич</div>
+											<div class="item-reviews-aside__date">12.09.2021</div>
+										</div>
+										<div class="item-reviews-aside__content _icon-quote">
+											<p>Спасибо за прекрасный совет, велосипед всей семье понравился и цену за него достойную запросили.</p>
+										</div>
+									</a>
+								</div>
 							</div>
 						</div>
 					</aside>
